--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { getCollection } from "astro:content";
 import PostCard from "../components/PostCard.astro";
 
 const posts = (await getCollection("blog"))
-  .sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf())
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
   .slice(0, 3);
 ---
 
@@ -29,9 +29,10 @@ const posts = (await getCollection("blog"))
 
       <section>
         <h2 class="text-xl font-bold font-serif mb-4">Recent Posts</h2>
-        <ul class="flex flex-col gap-6">
+        <ul class="flex flex-col gap-6 mb-4">
           {posts.map((post) => <PostCard post={post} />)}
         </ul>
+        <a href="/blog" class="underline font-serif font-thin">See More</a>
       </section>
     </main>
     <Footer />
