--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -56,3 +56,11 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- RSS Feed -->
+<link
+  rel="alternate"
+  type="application/rss+xml"
+  title="Noah Johnson"
+  href={`${Astro.site}rss.xml`}
+/>
