--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import HeaderLink from "./HeaderLink.astro";
     <div class="flex gap-6">
       <HeaderLink href="/">Home</HeaderLink>
       <HeaderLink href="/blog">Blog</HeaderLink>
-      <HeaderLink href="/personal">Personal</HeaderLink>
+      <HeaderLink href="/photos">Photos</HeaderLink>
     </div>
   </nav>
 </header>
