--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -20,7 +20,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     <Header />
     <main>
       <article
-        class="flex flex-col gap-2 prose prose-headings:font-serif prose-img:rounded-lg"
+        class="flex flex-col gap-2 prose prose-headings:font-serif prose-img:rounded-lg max-w-full"
       >
         <div>
           {
